--- a/client/src/components/common/ResumeModal.module.css
+++ b/client/src/components/common/ResumeModal.module.css
@@ -1,4 +1,3 @@
-
 .modalOverlay {
     position: fixed;
     top: 0;
@@ -33,7 +32,7 @@
 }
 
 .modalActions {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     gap: 1rem;
 }
