--- a/client/src/components/anime/AnimeCardSkeleton.module.css
+++ b/client/src/components/anime/AnimeCardSkeleton.module.css
@@ -1,4 +1,3 @@
-
 .skeletonCard {
     border-radius: var(--card-border-radius);
     overflow: hidden;
@@ -10,8 +9,8 @@
 
 
 .poster {
-    height: 250px;
     width: 100%;
+    aspect-ratio: 3 / 4;
     background-color: var(--dark-border);
     animation: pulse 1.5s infinite ease-in-out;
 }
@@ -41,9 +40,11 @@
     0% {
         opacity: 1;
     }
+
     50% {
         opacity: 0.6;
     }
+
     100% {
         opacity: 1;
     }
